# RSS-watcher

./: Cargo.toml  Dockerfile  Readme.md
.github/workflows/: docker-publish.yml
src/: database.rs  main.rs  notify.rs  rss_utils.rs
