[package]
name = "rss-watcher"
version = "0.3.1"
edition = "2021"

[dependencies]
futures = { version = "0.3.*" }
chrono = "0.4"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"] }
feed-rs = "1.1"
html2md = "0.2.14"
mime = "0.3.16"
mysql = { version = "22.0.0", default-features = false, features = ["rustls-tls"] }
flate2 = { version = "*", default-features = false, features = ["zlib"] }
mysql_common = { version = "0.28.2", default-features = false }
log = "0.4"
env_logger = "0.9.0"

