[package]
name = "rss-watcher"
version = "0.3.3"
edition = "2021"

[dependencies]
futures = { version = "0.3.*" }
chrono = "0.4"
tokio = { version = "1.32.0", features = ["full"] }
reqwest = { version = "0.11.20", default-features = false, features = ["rustls-tls"] }
feed-rs = "1.3"
html2md = "0.2.14"
mime = "0.3.17"
mysql = { version = "24.0.0", default-features = false, features = ["rustls-tls"] }
flate2 = { version = "1.0.27", default-features = false, features = ["zlib"] }
mysql_common = { version = "0.30.6", default-features = false }
log = "0.4.20"
env_logger = "0.10.0"

